# Compiler-Principle-2023Fall-Lab-Repo-deprecated-

./: CMakeLists.txt  NOTE.md  README.md  build.sh  compile_commands.json  environment.cpp  environment.hpp  main.cpp
AST/: AST.cpp  AST.hpp  ASTDumper.cpp  ASTDumper.hpp  ASTVisitor.hpp  Decl.cpp  Decl.hpp  Dumper.cpp  Dumper.hpp  Expr.cpp  Expr.hpp  Stmt.cpp  Stmt.hpp
CodeGen/: CodeGen.cpp  CodeGen.hpp
Interpreter/: Environment.cpp  Environment.hpp  InterpretExpr.cpp  InterpretStmt.cpp  Interpreter.cpp  Interpreter.hpp
Lex/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  Tokens.cpp  Tokens.hpp
Parse/: ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  Parser.cpp  Parser.hpp
Sema/: IdentifierTable.cpp  IdentifierTable.hpp  Lookup.cpp  Lookup.hpp  Object.cpp  Object.hpp  Resolver.cpp  Resolver.hpp  Scope.hpp  Sema.cpp  Sema.hpp  Symbols.cpp  Symbols.hpp
Test/: test.tc
ast/: ast_dumper.cpp  ast_dumper.hpp  ast_evaluator.cpp  ast_evaluator.hpp  ast_traverser.cpp  ast_traverser.hpp
interpreter/: EvaluateExpr.cpp  EvaluateStmt.cpp  environment.cpp  environment.hpp  evaluator.cpp  evaluator.hpp  interpreter.cpp  interpreter.hpp
parser/: ast.cpp  ast.hpp  dumper.cpp  dumper.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
test/: fib.txt  test1.tc  test2.tc  test3.tc  test4.tc  test5.tc
